--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -12,8 +12,18 @@
     <tbody>
       <% @current_cart.order_items.each do |item| %>
         <tr>
-          <td><%= item.product.title %></td>
-          <td><%= item.product.price %></td>
+          <td>
+          <%= image_tag item.product.image_1.url, width: "100" %>
+          <%= item.product.title %>
+          </td>
+          <td><%= number_to_currency item.product.price_in_pounds, unit: "£" %></td>
+
+          <td>
+          <%= simple_form_for [item.product, item] do |f| %>
+            <%= f.input :quantity, label: false %>
+            <%= f.button :submit, "Update quantity" %>
+          <% end %>       
+        </td>
           <td><%= item.quantity %></td>
           <td>
             <%= link_to "Remove", product_order_item_path(item.product, item), method: :delete %>
@@ -22,6 +32,13 @@
       <% end %>
     </tbody>
   </table>
+  <p>
+  Total: <%= number_to_currency @current_cart.total_price_in_pounds, unit: "£" %>
+  </p>
+  <p>
+  <%= link_to "Continue to checkout", new_order_path %>
+  </p>
+
 <% else %>
     <p> There are no items in your cart </p>
 <% end %>
